Prevent crash setting cover from current track applet

BUG: 270012